# metalgrow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  run.py
docs/: README.md  architecture.md  backbones.md  benchmarks.md  models.md  releasing.md  usage.md
docs/adr/: 0001-sr-backbone-dependency.md
src/metalgrow/: __init__.py  batch.py  cli.py  device.py  upscaler.py  weights.py
src/metalgrow/backbones/: __init__.py  base.py  bicubic.py  realesrgan.py  registry.py  swinir.py
tests/: test_backbones.py  test_batch.py  test_benchmarks.py  test_cli.py  test_device.py  test_models_cli.py  test_realesrgan.py  test_swinir.py  test_tiled_inference.py  test_upscaler.py  test_weights.py
